2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Properly show the method name for conversion operators.

2007-10-04  Zach Lute <zach.lute@gmail.com>

	* Parser/CSharpVisitor.cs: Added support for implicit/explicit operators as
	  methods. (Bug #330503)

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: Formatting fixes.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* CSharpAmbience.cs: Changed the C# ambience to recognize the new conversion
	  flags.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: Fixed "Bug 331772 - Unable to handle conditional class
	  definition".

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed "Bug 331000 - Auto-generation of
	  XML comment tags sometimes incorrect".

2007-10-09  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManger.cs: Moved code for building resources to
	DotNetProject.

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: fixed "Bug 325223 - Interface refactory doesn't
	  implement correctly (4 bugs)".

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* Parser/ExpressionFinder.cs: Worked on "Bug 330717 - Error while updating
	  status of command. CurrentRefactoryOperations". Need to get reply, if
	  this bug is fixed (couldn't reproduce the problem).

2007-10-05  Ankit Jain  <jankit@novell.com>

	* Autotools/CSharpAutotoolsSetup.cs (GetCompilerFlags): Correctly emit
	flag for optimization. Don't emit -define:DEBUG if its already defined
	in DefineSymbols.

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: fixed Bug 325523 - MD override
	  auto-implementation ignores existing implementations.

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: fixed Bug 330793 - Delegate
	  autocommenting crashes.

2007-10-03  Lluis Sanchez Gual <lluis@novell.com> 
