@@ -1,5 +1,9 @@
 2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* CSharpAmbience.cs: Always show parameter types.
+
+2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* CSharpAmbience.cs: Properly show the method name for conversion operators.
 
 2007-10-04  Zach Lute <zach.lute@gmail.com>
